--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,8 +4,15 @@
 	margin: 0 auto;
 }
 
+.headwrap{
+	width: 75%;
+	margin: 0 auto;
+}
+
 .header{
 	background-color: #CED1D2;
+	width: 100%;
+	float: left;
 }
 
 .navigation{
@@ -16,6 +23,7 @@
 
 .slider{
 	background-color: #CED1D2;
+	float: left;
 }
 
 .logo{
@@ -27,13 +35,42 @@
 
 .banner{
 	margin: 1%;
+	float: left;
 }
 
 .blocos{
 	margin: 2%;
+	width: 100%;
 }
 
 .bloco{
-	width: 30%;
+	width: 33%;
+	height: 450px;
 	float: left;
+}
+
+.footer{
+	width: 100%;
+	float: left;
+}
+
+.escuro{
+	background-color: #666666;
+	width: 100%;
+}
+
+.claro{
+	background-color: #999999;
+	width: 100%;
+	float: left;
+}
+
+.direitos{
+	float: left;
+	width: 50%;
+}
+
+.crowdfunding{
+	float: left;
+	width: 50%;
 }
