--- a/css/estilos.css
+++ b/css/estilos.css
@@ -64,6 +64,12 @@ body{
 	width: 100%;
 	height: 140px;
 	float: left;
+	color: #CCC;
+	line-height: 1.2;
+}
+
+.escuro h2{
+	color: white;
 }
 
 .claro{
@@ -77,6 +83,7 @@ body{
 	float: left;
 	width: 50%;
 	height: 100%;
+	color: white;
 }
 
 .crowdfunding{
@@ -95,4 +102,9 @@ body{
 .footerwrap{
 	width: 75%;
 	margin: 0 auto;
+}
+
+.sobre{
+	float: left;
+	width: 33%;
 }
